[gd_scene load_steps=3 format=3 uid="uid://c32tu8ja2dd0m"]

[ext_resource type="Script" uid="uid://bsohdkcu0qpfa" path="res://Scenes/Work Timer/work_timer.gd" id="1_1f5mk"]

[sub_resource type="LabelSettings" id="LabelSettings_g32yk"]
font_size = 100

[node name="work_timer_scene" type="Node2D"]
script = ExtResource("1_1f5mk")

[node name="work_timer" type="Timer" parent="."]

[node name="time_counter" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 808.0
offset_right = 1152.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_g32yk")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="work_timer" to="." method="_on_work_timer_timeout"]
